k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: nsnhatlong/client
          ports:
            - containerPort: 4001 # the port that image inside deployment exposed
