k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: client-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 5173 # port that exposed to other cluster
      targetPort: 5173 # inner exposed port
