k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000 # port that exposed to other cluster
      targetPort: 5000 # inner exposed port
